Trained an albert-base-v2 model and tested it

--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,25 @@
 /data/recipes/recipes_all.csv
 
 /data/BERT_tokenizer.pkl
+/data/ALBERT_tokenizer.pkl
 /data/df_test.pkl
 /data/df_train.pkl
 /data/relations.pkl
 
 /data/task_test_model_best_0.pth.tar
+/data/task_test_model_best_1.pth.tar
 /data/task_test_checkpoint_0.pth.tar
+/data/task_test_checkpoint_1.pth.tar
 
 /data/task_test_losses_per_epoch_0.pkl
+/data/task_test_losses_per_epoch_1.pkl
 /data/task_train_accuracy_per_epoch_0.pkl
+/data/task_train_accuracy_per_epoch_1.pkl
 /data/task_test_accuracy_per_epoch_0.pkl
+/data/task_test_accuracy_per_epoch_1.pkl
 /data/task_test_precision_per_epoch_0.pkl
+/data/task_test_precision_per_epoch_1.pkl
 /data/task_test_recall_per_epoch_0.pkl
+/data/task_test_recall_per_epoch_1.pkl
 /data/task_test_f1_per_epoch_0.pkl
+/data/task_test_f1_per_epoch_1.pkl
